# nsfw_guard

./: .env_sample  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: test.yml
src/: main.py  models.py
